--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
-
-symph.io is disrupting the big data visualization industry.
-
-With our current tools, big data leads quickly to information overload.
-
-<!-- big data information overload -->
-
-In order to unlock the potential of big data, we need new big data analysis
-environments that leverage the full capabilities of the human senses.
-
-<!-- human senses -->
-
-We have developed a technology for ambient, realtime presentations of complex,
-high-dimensional big data. This new big data presentation method transforms the way
-realtime big data is used in business.
-
-
-
+<html>
+  <head>
+    <link type='text/css' rel='stylesheet' href='style.css' />
+  </head>
+  <body>
+    <img id="wordmark" src="symphio.png" alt="symph.io" />
+    <article>
+      <p>
+        We enable ambient, realtime presentations of complex, high-dimensional big data.
+        <a href="about">Read more</a> or <a href="mailto:contact@symph.io">get in touch</a>.
+      </p>
+    </article>
+  </body>
+</html>
