--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   </head>
   <body>
     <a href="/"><img id="wordmark" src="symphio.png" alt="symph.io" /></a>
-    <article>
+    <article style="text-align: center;">
       <p>
         We enable ambient, realtime presentations of complex, high-dimensional big data.
-        <a href="about">Read more</a> or <a href="mailto:contact@symph.io">get in touch</a>.
+        <a href="about">Read more</a>, or <a href="mailto:contact@symph.io">get in touch</a>.
       </p>
     </article>
   </body>
