--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <body>
     <a href="/"><img id="wordmark" src="symphio.png" alt="symph.io" /></a>
     <article>
-      <p><strong>symph.io</strong> is disrupting the big data visualization industry.</p>
+      <p><strong>symph.io</strong> is disrupting the big data analytics industry.</p>
      
       <img src="" alt="big data" />
 
