--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <body>
     <a href="/"><img id="wordmark" src="symphio.png" alt="symph.io" /></a>
     <article>
-      <p><strong>symph.io</strong> is disrupting the big data analytics industry.</p>
+      <p><strong>symph.io</strong> is disrupting big data analytics.</p>
      
       <img src="" alt="big data" />
 
@@ -21,11 +21,30 @@
       <img src="" alt="information overload" />
      
       <p>
-        <strong>symph.io</strong> is a new kind of tool.
-        We have developed a technology for ambient, realtime presentations of complex,
+        <strong>symph.io</strong> is a new kind of technology.
+        It enables ambient, realtime presentations of complex,
         high-dimensional big data. This new big data presentation method transforms the way
         realtime big data is used in business.
       </p>
+      <h2>Team</h2>
+      <p>We're data scientists who want to change the way businesses experience big data.</p>
+      <div id="team">
+        <div class="comrade">
+          <img src="brian.png" alt="Brian Abelson" />
+          <span class="name">Brian Abelson</span>
+          <span class="title">Data Journalist</span>
+        </div>
+        <div class="comrade">
+          <img src="burton.png" alt="Burton DeWilde" />
+          <span class="name">Burton DeWilde</span>
+          <span class="title">Data Physicist</span>
+        </div>
+        <div class="comrade">
+          <img src="thomas.png" alt="Thomas Levine" />
+          <span class="name">Thomas Levine</span>
+          <span class="title">Data Psychologist</span>
+        </div>
+      </div>
     </article>
   </body>
 </html>
