--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <article style="text-align: center;">
       <p>
         We enable ambient, realtime presentations of complex, high-dimensional big data.
-        <a href="about">Read more</a>, or <a href="mailto:contact@symph.io">get in touch</a>.
+        <a href="about.html">Read more</a>, or <a href="mailto:contact@symph.io">get in touch</a>.
       </p>
     </article>
   </body>
