--- a/index.html
+++ b/index.html
@@ -10,5 +10,17 @@
         <a href="about.html">Read more</a>, or <a href="mailto:contact@symph.io">get in touch</a>.
       </p>
     </article>
+  <!-- Piwik --> 
+  <script type="text/javascript">
+      var pkBaseURL = (("https:" == document.location.protocol) ? "https://piwik.thomaslevine.com/" : "http://piwik.thomaslevine.com/");
+      document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
+      </script><script type="text/javascript">
+      try {
+          var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 16);
+          piwikTracker.trackPageView();
+          piwikTracker.enableLinkTracking();
+      } catch( err ) {}
+  </script><noscript><p><img src="http://piwik.thomaslevine.com/piwik.php?idsite=16" style="border:0" alt="" /></p></noscript>
+  <!-- End Piwik Tracking Code -->
   </body>
 </html>
