--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <link type='text/css' rel='stylesheet' href='style.css' />
   </head>
   <body>
-    <a href="/"><img id="wordmark" src="symphio.png" alt="symph.io" /></a>
+    <a href="."><img id="wordmark" src="symphio.png" alt="symph.io" /></a>
     <article>
       <p><strong>symph.io</strong> is disrupting big data analytics.</p>
      
