--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link type='text/css' rel='stylesheet' href='style.css' />
   </head>
   <body>
-    <a href="/"><img id="wordmark" src="symphio.png" alt="symph.io" /></a>
+    <a href="."><img id="wordmark" src="symphio.png" alt="symph.io" /></a>
     <article style="text-align: center;">
       <p>
         We enable ambient, realtime presentations of complex, high-dimensional big data.
